LOG Updated to 1.4409 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Parse-CPAN-Meta-1.4404.tar.gz: b1633b80f65009aba7f7ed7966aa2715c27fc084
-sources:
   Parse-CPAN-Meta-1.4405.tar.gz: 351d544d6d62593700b38dc2c3b3c8d870274b85
+sources:
+  Parse-CPAN-Meta-1.4409.tar.gz: 40378a62c71c44656744051fa7a70071ab409bba
